# snaprag

./: .gitignore  API.md  Cargo.toml  build.rs  config.example.toml  top_1000_users_20251222_084405.csv
.github/workflows/: auto-update-prs.yml  ci.yml  pr.yml  release.yml  test-fast.yml
examples/: backfill_important_users_links.rs  custom_pipeline.rs  payment_monitor.rs  payment_server.rs  rag_query.rs  semantic_search.rs  simple_query.rs  test_link_parsing.rs
migrations/: 000_complete_init.sql  001_annual_report_indexes.sql
scripts/: apply_annual_report_indexes.sh  check_username_proofs.rs  run_index_analysis.sh  test_annual_report.sh  test_annual_report_api.rs  test_annual_report_data.rs  test_api_response.sh
src/: config.rs  errors.rs  lib.rs  logging.rs  main.rs  personality_ml.rs  social_graph.rs
src/api/: cache.rs  mcp_server.rs  metrics.rs  mod.rs  redis_client.rs  routes.rs  server.rs  session.rs  types.rs
src/api/auth/: middleware.rs  mod.rs  signature.rs
src/api/handlers/: annual_report.rs  cast_stats.rs  chat.rs  content_style.rs  domains.rs  engagement.rs  follower_growth.rs  job_helpers.rs  mbti.rs  metrics.rs  mod.rs  network_stats.rs  profile.rs  search.rs  social_handler_new.rs  stats.rs  temporal_activity.rs
src/cli/: commands.rs
src/cli/handlers/: annual_report.rs  auth.rs  cache.rs  cast.rs  fetch.rs  index.rs  mbti.rs  mod.rs  serve.rs  user_metrics.rs  utils.rs
src/cli/handlers/ask/: retrieval.rs
src/cli/handlers/serve/: chat.rs  hook.rs  mod.rs
src/database/: casts.rs  content_style.rs  engagement.rs  follower_growth.rs  mod.rs  network_stats.rs  temporal.rs  user_profiles.rs  username_proofs.rs  verifications.rs
src/embeddings/: local_gpu.rs  mod.rs  service_factory.rs
src/llm/: client.rs  mod.rs
src/rag/: cast_retriever.rs  retriever.rs
src/sync/: client.rs  lazy_loader.rs  lock_file.rs  mod.rs  process_monitor.rs  state_manager.rs
src/sync/hooks/: config.rs  func_hook.rs  matcher.rs  mod.rs  queue.rs  webhook_client.rs
src/sync/hooks/tests/: event_matcher_tests.rs  func_hook_tests.rs  hook_manager_tests.rs  mod.rs  webhook_client_tests.rs
src/sync/service/: coordinator.rs  lifecycle.rs  mod.rs  monitoring.rs
src/sync/shard_processor/: batch.rs  mod.rs  utils.rs
src/sync/shard_processor/handlers/: frame.rs  mod.rs  system.rs
src/tests/: chat_queue_test.rs  event_sourcing_test.rs  find_username_proofs_and_frames.rs  grpc_shard_chunks_test.rs  integration_sync_test.rs  message_types_test.rs  mod.rs  null_byte_test.rs  rag_integration_test.rs  real_data_test.rs  real_username_proofs_and_frames_test.rs  redis_cache_test.rs  strict_test_runner.rs  strict_test_validation.rs
src/text_analysis/: mod.rs
src/utils/: emoji.rs  mod.rs
tests/: annual_report_tests.rs  api_tests.rs  auth_test.rs  mbti_basic_tests.rs  message_types_integration.rs
